--- a/src/globals.css
+++ b/src/globals.css
@@ -100,6 +100,53 @@ body {
     width: 128px;
 }
 
+#listbox {
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    max-height: 200px;
+    overflow-y: auto;
+    position: absolute;
+    width: 350px;
+    z-index: 100;
+}
+
+#listbox.hidden {
+    display: none;
+}
+
+#listbox ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+#listbox li {
+    cursor: pointer;
+    padding: 10px;
+}
+
+#listbox li:hover {
+    background-color: #f0f0f0;
+}
+
+.itemListbox {
+    align-items: center; 
+    border-radius: 0.375rem;
+    box-sizing: border-box; 
+    cursor: pointer; 
+    display: flex; 
+    gap: 0.5rem; 
+    height: 100%; 
+    justify-content: space-between; 
+    outline: none;
+    padding: 0.375rem 0.5rem; 
+    position: relative; 
+    width: 100%; 
+    -webkit-font-smoothing: subpixel-antialiased;
+    -webkit-tap-highlight-color: transparent; 
+}
+
 .footer {
     align-items: center;
     display: flex;
@@ -120,6 +167,11 @@ body {
     justify-content: center;
     padding-top: 3%;
 }
+
+#addToCartBtn {
+    background-color: #2C8A8C;
+}
+
 
 .cartContainer {
     align-items: center;
@@ -142,7 +194,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0% 5% 0% 5%;
     width: 100%;
 }
 
@@ -150,17 +201,37 @@ body {
     align-items: center;
     color: #121212;
     display: flex;
-    justify-content: center;
-    margin: 0% 0% 2% 0%;
+    justify-content: space-between;
+    margin: 0% 0% 2.5% 0%;
     width: 75%;
 }
 
 .delete-button {
-    background-color: #CC6D6D;
-    border: 0px solid #12121200;
-    border-radius: 25px;
-    color: #121212;
-    font-weight: bold;
-    margin: 0% 2.5% 0% 2.5%;
-    padding: 2.5% 2.5% 0.5% 2.5%;
+    align-items: center; 
+    appearance: none; 
+    background-color: #990000; 
+    border-radius: 9999px; 
+    box-sizing: border-box; 
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1); 
+    color: var(--tw-color-success-foreground); 
+    display: inline-flex; 
+    font-weight: 400; 
+    font-size: 1rem; 
+    gap: 0.75rem; 
+    height: 3rem; 
+    justify-content: center; 
+    margin: 0 0 0 2.5%;
+    min-width: 6rem; 
+    outline: none; 
+    overflow: hidden; 
+    padding-left: 1.5rem; 
+    padding-right: 1.5rem; 
+    position: relative; 
+    transition: transform, colors, opacity; 
+    transition-duration: 0.75s;
+    white-space: nowrap; 
+    z-index: 0; 
+    -webkit-user-select: none;
+    user-select: none; 
+    -webkit-tap-highlight-color: transparent; 
 }
